# ACL25-CoPE

./: LICENSE  MANIFEST.in  README.md  __init__.py  config_example.yaml  engine.py  environment.yaml  eval.py  pyproject.toml  setup.py  test.yaml  train.py
models/: __init__.py  config.py  encoders.py  gpo.py  loss.py  model.py  registry.py  utils.py
util/: __init__.py  data.py  misc.py  transforms.py
